--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "mongodb": "^3.1.0-beta4",
     "watson-developer-cloud": "^3.4.0"
   },
   "devDependencies": {
