--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "startdev":"set DV_ENV=test && nodemon server.js",
     "start": "nodemon server.js"
   },
   "keywords": [],
